crates/ferrum-interfaces/tests/ui/vnext/fail/static_lease_cannot_mint_runtime_binding.rs
use ferrum_interfaces::vnext::{DeviceRuntime, StaticProvisioningLease};

fn mint<R: DeviceRuntime>(lease: &StaticProvisioningLease<R>) {
    let _binding = lease.trusted_runtime_binding();
}

fn main() {}
